can capture user location, added autocomplete search with snap location

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
     </activity>
 
 
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCHHltdISA5_SWgYvkWkTPXnHkQMPbmMEY"/>
 
     <!-- The Facebook SDK runs FacebookInitProvider on startup and crashes if there isn't an ID here -->
