--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.0.tar.gz",
     "react-native-drawer": "^2.5.0",
     "react-native-easy-grid": "^0.1.15",
+    "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-maps": "^0.17.1",
     "react-native-push-notification": "^3.0.2",
     "react-native-stars-rating": "^0.1.7",
